--- a/src/catkin/src/i_believe_i_can_fly_pose_detection/CMakeLists.txt
+++ b/src/catkin/src/i_believe_i_can_fly_pose_detection/CMakeLists.txt
@@ -14,6 +14,7 @@ add_message_files(
     Calibration.msg
     Instruction.msg
     Instructions.msg
+    FOVInstructions.msg
 )
 
 generate_messages(
